styling fix to allow player to horizontally scroll overflowing hands

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -103,6 +103,7 @@ body {
 
 .player-area {
   height: 40%;
+  overflow-x: auto;
   .name-tag {
     font-size: 3.6em;
     text-align: center;
